--- a/app/src/main/res/navigation/nav_zap.xml
+++ b/app/src/main/res/navigation/nav_zap.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_zap">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_zap"
+    app:startDestination="@id/fragListaZapatos">
 
+    <fragment
+        android:id="@+id/fragListaZapatos"
+        android:name="com.example.sprintfinal5zapatos.FragListaZapatos"
+        android:label="fragment_lista_zapatos"
+        tools:layout="@layout/fragment_lista_zapatos" />
 </navigation>
