--- a/app/src/main/res/layout/fragment_lista_zapatos.xml
+++ b/app/src/main/res/layout/fragment_lista_zapatos.xml
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="47dp"
-        android:text="Button"
+        android:text="Lista"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
