--- a/app/src/main/res/layout/fragment_vista_zapatos.xml
+++ b/app/src/main/res/layout/fragment_vista_zapatos.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#222831"
     tools:context=".FragVistaZapatos">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="239dp"
         android:layout_height="202dp"
-        android:layout_marginStart="86dp"
-        android:layout_marginTop="125dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="68dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/avatars" />
@@ -20,9 +21,12 @@
         android:id="@+id/txtNombreVista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="174dp"
-        android:layout_marginTop="94dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginTop="80dp"
+        android:fontFamily="@font/lilitaone_regular"
         android:text="TextView"
+        android:textColor="#00ADB5"
+        android:textSize="48sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -30,19 +34,24 @@
         android:id="@+id/txtPrecioVista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="178dp"
-        android:layout_marginTop="107dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginTop="52dp"
+        android:fontFamily="@font/lilitaone_regular"
         android:text="TextView"
+        android:textColor="#00ADB5"
+        android:textSize="48sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNombreVista" />
 
     <Button
         android:id="@+id/btnAgregar"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="164dp"
-        android:layout_marginBottom="57dp"
-        android:text="Button"
+        android:layout_marginBottom="80dp"
+        android:backgroundTint="#00ADB5"
+        android:text="Agregar al carro"
+        android:textColor="#222831"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
