--- a/app/src/main/res/layout/item_carrito.xml
+++ b/app/src/main/res/layout/item_carrito.xml
@@ -8,6 +8,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="409dp"
         android:layout_height="100dp"
+        app:cardBackgroundColor="#393E46"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,9 +30,12 @@
                 android:id="@+id/txtNombreCarrito"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="87dp"
-                android:layout_marginTop="26dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="16dp"
                 android:text="TextView"
+                android:textColor="#00ADB5"
+                android:textSize="20sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/imgCarrito"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,9 +43,12 @@
                 android:id="@+id/txtPrecioCarrito"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="87dp"
-                android:layout_marginTop="28dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="12dp"
                 android:text="TextView"
+                android:textColor="#00ADB5"
+                android:textSize="20sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/imgCarrito"
                 app:layout_constraintTop_toBottomOf="@+id/txtNombreCarrito" />
 
@@ -49,11 +56,22 @@
                 android:id="@+id/btnEliminar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="36dp"
-                android:layout_marginEnd="18dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="16dp"
                 android:text="Button"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/imgDelete"
+                android:layout_width="58dp"
+                android:layout_height="48dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="2dp"
+                android:contentDescription="@string/app_name"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@drawable/ic_delete" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
