--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -16,7 +16,9 @@
         android:id="@+id/CardCanastaZapatos"
         android:layout_width="206dp"
         android:layout_height="171dp"
-        app:cardBackgroundColor="#FF8989"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:cardBackgroundColor="#393E46"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -26,29 +28,31 @@
 
             <TextView
                 android:id="@+id/txtNombre"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="112dp"
-                android:layout_marginEnd="60dp"
+                android:gravity="center"
                 android:text="TextView"
-                android:textColor="#142B5A"
+                android:textColor="#EEEEEE"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/txtPrecio"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="60dp"
                 android:layout_marginBottom="4dp"
+                android:gravity="center"
                 android:text="TextView"
-                android:textColor="#142B5A"
+                android:textColor="#EEEEEE"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <ImageView
                 android:id="@+id/imgZapatos"
