Funcionalidad y diseños realizadas. Punto Check

--- a/app/src/main/res/layout/fragment_vista_zapatos.xml
+++ b/app/src/main/res/layout/fragment_vista_zapatos.xml
@@ -19,38 +19,41 @@
 
     <TextView
         android:id="@+id/txtNombreVista"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
         android:layout_marginTop="80dp"
         android:fontFamily="@font/lilitaone_regular"
+        android:gravity="center"
         android:text="TextView"
         android:textColor="#00ADB5"
         android:textSize="48sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/txtPrecioVista"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
         android:layout_marginTop="52dp"
         android:fontFamily="@font/lilitaone_regular"
+        android:gravity="center"
         android:text="TextView"
         android:textColor="#00ADB5"
         android:textSize="48sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNombreVista" />
 
     <Button
         android:id="@+id/btnAgregar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="405dp"
+        android:layout_height="72dp"
         android:layout_marginBottom="80dp"
         android:backgroundTint="#00ADB5"
         android:text="Agregar al carro"
         android:textColor="#222831"
+        android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
