--- a/app/src/main/res/layout/item_carrito.xml
+++ b/app/src/main/res/layout/item_carrito.xml
@@ -22,6 +22,7 @@
                 android:id="@+id/imgCarrito"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="18dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/avatars" />
@@ -52,22 +53,12 @@
                 app:layout_constraintStart_toEndOf="@+id/imgCarrito"
                 app:layout_constraintTop_toBottomOf="@+id/txtNombreCarrito" />
 
-            <Button
-                android:id="@+id/btnEliminar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="16dp"
-                android:text="Button"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <ImageButton
                 android:id="@+id/imgDelete"
                 android:layout_width="58dp"
                 android:layout_height="48dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="2dp"
+                android:layout_marginBottom="24dp"
                 android:contentDescription="@string/app_name"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
