--- a/app/src/main/res/layout/fragment_vista_zapatos.xml
+++ b/app/src/main/res/layout/fragment_vista_zapatos.xml
@@ -13,6 +13,7 @@
         android:layout_height="202dp"
         android:layout_marginStart="84dp"
         android:layout_marginTop="68dp"
+        android:background="#393E46"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/avatars" />
